Make tables responsive

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -46,7 +46,9 @@ a:hover {
 
 /* NestedTable CSS*/
 .nested-table-container {
-  width: 50%;
+  width: 45%;
+  display: inline-block;
+  margin-right: 25px;
 }
 
 table {
@@ -70,7 +72,9 @@ th {
 
 /* DataTable CSS*/
 .data-table-container{
-  width: 50%;
+  width: 45%;
+  display: inline-block;
+  margin-left: 25px;
 }
 
 .dataTables_length label {
@@ -201,6 +205,21 @@ rect {
 
 g.cell {
   stroke: rgb(0,0,0)
+}
+
+
+
+/* responsiveness */
+@media (max-width: 1150px) {
+
+ .nested-table-container {
+   width: 100%;
+ }
+
+ .data-table-container{
+   width: 90%;
+ }
+
 }
 
 
